# test1

./: LEC02.md  Lec02.ipynb  README.md  README.py  beautifyJupyter.py  beautifyJupyterReadme.py  create_requirements.py  setup.cfg
.github/workflows/: changes.yml  changes2.yml  changes3.yml  work.yml  work1.yml  work2.yml  work3.yml  work4.yml  work5.yml
Lec02_files/: Lec02.ipynb  Lec02.py  README.md  lec02.md
Lec03_files/: file  file.txt
test1.egg-info/: PKG-INFO  SOURCES.txt
