[metadata]
name = test1
version = 0.0.1
author_email = joseantoniotv91@gmail.com
description = retention models to forecast churn
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/testus3/test1
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Information Analysis
